The issue 387 asks to replace links by icons especially in the tables. The ajax_htmldata files of the licensing, organizations, resources and usage modules have been amended, the css classes  addIcon,adminAddIcon, removeIcone, AdminRemoveIcon, editIcon, adminEditIcon, adminUploadIcon and alignIcon have been created. alignIcon uses flexbox. Some links remain for a better understanding of users. Update(the 05 march 19) : add icons in the management module

--- a/management/css/style.css
+++ b/management/css/style.css
@@ -1931,3 +1931,9 @@ table.titleTable {
 	margin-top: 0px !important;
 	overflow-x: hidden !important;
 }
+
+/*--- Icon Align ---*/
+
+.addIcon {
+	vertical-align: -3px;
+}
